CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_STATUS_MODE__c.object
<CustomObject>
    <description>Has the case status(opn,close,pen)</description>
    <fields>
        <fullName>CDE_ELIGTY_CONTNUS__c</fullName>
        <label>Maintain Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00387</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_MODE_CASE__c</fullName>
        <description>Case Mode</description>
        <label>Case Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00358</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_REASON_CHANGE_MODE_STATUS__c</fullName>
        <label>Closure/Reopen Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00388</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_REOPEN_REASON__c</fullName>
        <label>Reopen Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00382</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_CASE__c</fullName>
        <description>Case Status</description>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00357</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Status Mode</relationshipLabel>
        <relationshipName>T_SBSD_CASE10</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Status_Reverse_Refer_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Status Reverse Refer Track</label>
        <description>This field is used to identify a case when status is closed and needs to be sent to CBMS.</description>
        <type>Checkbox</type>
    </fields>
    <label>Case Status Mode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDE_MODE_CASE__c</field>
            <operation>equals</operation>
            <value>INT</value>
        </filters>
        <filters>
            <field>DTE_BEGIN_EFFV__c</field>
            <operation>lessOrEqual</operation>
            <value>1/18/2018</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CDE_STATUS_CASE__c</columns>
        <columns>IDN_CASE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Case Status Mode ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Status Mode</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Effective_End_Date_Greater_than_Begin</fullName>
        <active>false</active>
        <description>Effective End Date cannot be before Effective Start Date</description>
        <errorConditionFormula>AND (
DTE_END_EFFV__c &lt; DTE_BEGIN_EFFV__c,
 $Label.Batch_User_Id  &lt;&gt;  $User.Id 
)</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Case cannot be reopened on the same day it was closed, please try again tomorrow.</errorMessage>
    </validationRules-->
</CustomObject>