CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_STATUS_MODE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDE_STATUS_CASE__c</columns>
    <columns>CDE_MODE_CASE__c</columns>
    <columns>DTE_BEGIN_EFFV__c</columns>
    <columns>DTE_END_EFFV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_STATUS_CASE__c</field>
        <operation>equals</operation>
        <value>REO</value>
    </filters>
    <label>All</label>
</ListView>