CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_STATUS_MODE__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CDE_STATUS_CASE__c</columns>
    <columns>IDN_CASE__c</columns>
    <columns>CDE_ELIGTY_CONTNUS__c</columns>
    <columns>CDE_REASON_CHANGE_MODE_STATUS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>